fix overflow issue on long strings

--- a/react/src/index.css
+++ b/react/src/index.css
@@ -18,6 +18,7 @@ body {
 
 .debate-window div {
   min-width:100%;
+  overflow-x:hidden;
 }
 
 code {
